--- a/index.html
+++ b/index.html
@@ -4,48 +4,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ad VDO Made Easy</title>
+    <title>Ad VDO Made Easy | Bengal's No.1 Video Agency</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <style>
-      body {
-        font-family: 'Inter', sans-serif;
-        background-color: #000000;
-        color: #ffffff;
-        scroll-behavior: smooth;
+    <link rel="stylesheet" href="globals.css">
+    <script type="importmap">
+    {
+      "imports": {
+        "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+        "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+        "react/": "https://esm.sh/react@^19.2.3/",
+        "react": "https://esm.sh/react@^19.2.3"
       }
-      .glass {
-        background: rgba(255, 255, 255, 0.03);
-        backdrop-filter: blur(12px);
-        -webkit-backdrop-filter: blur(12px);
-        border: 1px solid rgba(255, 255, 255, 0.1);
-      }
-      .glass-red {
-        background: rgba(239, 68, 68, 0.1);
-        backdrop-filter: blur(8px);
-        border: 1px solid rgba(239, 68, 68, 0.2);
-      }
-      .red-glow {
-        box-shadow: 0 0 20px rgba(239, 68, 68, 0.3);
-      }
-      .transition-all {
-        transition-property: all;
-        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-        transition-duration: 300ms;
-      }
-    </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "next": "https://esm.sh/next@^16.1.1"
-  }
-}
-</script>
-</head>
+    }
+    </script>
+  </head>
   <body>
     <div id="root"></div>
   </body>
